force-app/main/default/objects/Medical_Appointment__c/Medical_Appointment__c.object-meta.xml
<CustomObject>
    <label>Medical Appointment</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Medical Appointment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>