force-app/main/default/objects/Medical_Appointment__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <description>Typ wizyty</description>
    <label>Appointment Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Specialist Consultation</fullName>
            </value>
            <value>
                <fullName>Follow-up Appointment</fullName>
            </value>
            <value>
                <fullName>General Check-up</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Telehealth</fullName>
            </value>
            <value>
                <fullName>Urgent Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>