force-app/main/default/objects/Medical_Appointment__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <label>Doctor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Person__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Doctor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Medical Appointments (Doctor)</relationshipLabel>
    <relationshipName>Medical_Appointments1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>