force-app/main/default/objects/Medical_Appointment__c/fields/Duration_Time__c.field-meta.xml
<CustomField>
    <fullName>Duration_Time__c</fullName>
    <description>Czas trwania wizyty</description>
    <label>Duration Time</label>
    <type>Time</type>
</CustomField>