force-app/main/default/objects/Medical_Appointment__c/fields/Email_content__c.field-meta.xml
<CustomField>
    <fullName>Email_content__c</fullName>
    <label>Email content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>