force-app/main/default/objects/Medical_Appointment__c/fields/Medical_facility__c.field-meta.xml
<CustomField>
    <fullName>Medical_facility__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Medical facility</label>
    <referenceTo>Medical_Facility__c</referenceTo>
    <relationshipLabel>Medical Appointments</relationshipLabel>
    <relationshipName>Medical_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>