force-app/main/default/objects/Medical_Appointment__c/fields/Person2__c.field-meta.xml
<CustomField>
    <fullName>Person2__c</fullName>
    <label>Person</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Medical Appointments (Person)</relationshipLabel>
    <relationshipName>Medical_Appointments1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>