force-app/main/default/objects/Medical_Appointment__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Powód wizyty</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>